tests/fixtures/invalid/none_bitand_float.py
# Cannot bitwise AND None and Float
x: float = None & 1.0
